toggle dark-theme  onsite-header theme-toglger click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css ">
 </head>
-<body class="dad">
+<body class="">
 
   <header class="site-header">
     <div class="site-header-container container">
@@ -28,6 +28,16 @@
       </button>
     </div>
   </header>
+
+
+
+
+
+
+
+
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
