add filter form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
       </button>
     </div>
   </header>
-
+  <!-- main -content -->
+<main class="main-content">
+  <div class="container">
+    <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
+      <input type="search" class="filter-search-input" name="search" required placeholder="Search for a country…" aria-label="Country name">
+      <select class="filters-region-select" aria-label="Regions" name="region" id="">
+        <option selected disabled>Filter by Regions</option>
+        <option  >Africa</option>
+        <option >America</option>
+        <option >Asia</option>
+        <option >Europe</option>
+        <option >Oceania</option>
+      </select>
+    </form>
+  </div>
+</main>
 
 
 
