--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,300;0,6..12,400;0,6..12,600;1,6..12,800&display=swap" rel="stylesheet">
-<!-- styles -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,300;0,6..12,400;0,6..12,600;1,6..12,800&display=swap" rel="stylesheet">
+  <!-- styles -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css ">
 </head>
@@ -29,21 +29,240 @@
     </div>
   </header>
   <!-- main -content -->
-<main class="main-content">
-  <div class="container">
-    <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
-      <input type="search" class="filter-search-input" name="search" required placeholder="Search for a country…" aria-label="Country name">
-      <select class="filters-region-select" aria-label="Regions" name="region" id="">
-        <option selected disabled>Filter by Regions</option>
-        <option  >Africa</option>
-        <option >America</option>
-        <option >Asia</option>
-        <option >Europe</option>
-        <option >Oceania</option>
-      </select>
-    </form>
-  </div>
-</main>
+  <main class="main-content">
+    <div class="container">
+      <section>
+        <!-- <h2>Filtirlar</h2> -->
+        <form class="filters" action="https://echo.htmlacademy.ru" method="get" >
+          <input type="search" class="filter-search-input" name="search" required placeholder="Search for a country…" aria-label="Country name">
+          <select class="filters-region-select" aria-label="Regions" name="region" id="">
+            <option selected disabled>Filter by Regions</option>
+            <option  >Africa</option>
+            <option >America</option>
+            <option >Asia</option>
+            <option >Europe</option>
+            <option >Oceania</option>
+          </select>
+        </form>
+      </section>
+
+      <!-- index countries -->
+      <section class="index-countries">
+        <!-- <h2>Index countries</h2> -->
+        <ul class="index-countries-list">
+          <!-- 1 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Germany.jpg" alt="Germany flag "
+              srcset="img/Germany.jpg 1, img/Germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                 <a href="country.html" class="index-country-link">Germany</a>
+                 </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value"> 81,770,900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: Berlin:</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 2 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/USA..jpg" alt="USA flag "
+              srcset="img/USA.jpg 1, img/USA@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">United States of America</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value">  323,947,000</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value">  Americas</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Washington, D.C.</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 3 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Brazil.jpg" alt="Brazil flag "
+              srcset="img/Brazil.jpg 1, img/Brazil@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Brazil</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value"> 206,135,893</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Americas</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Brasília</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 4 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Iceland.jpg" alt="Iceland flag "
+              srcset="img/Iceland.jpg 1, img/Iceland@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Icland</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value">  334,300</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Reykjavík</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 5
+           -->
+           <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Afganistan.jpg" alt="Afganistan flag "
+              srcset="img/Afganistan.jpg 1, img/Afganistan@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Afhganistan</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value"> 27,657,145</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Asia</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Kabul</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 6 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Alan-Island.jpg" alt="Alan-Island flag "
+              srcset="img/Alan-Island.jpg 1, img/Alan-Island@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Alan-Island</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value"> 28,875</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Mariehamn</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 7 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Albania.jpg" alt="Albania flag "
+              srcset="img/Albania.jpg 1, img/Albania@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Albania</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value"> 2,886,026</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Tirana</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <!-- 8 -->
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag " width="265" height="160" src="img/Algeria.jpg" alt="Algeria flag "
+              srcset="img/Algeria.jpg 1, img/Algeria@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a href="country.html" class="index-country-link">Algeria</a>
+                  </h3>
+                <dl class="index-country-detailes">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Population:</dt>
+                    <dd class="index-country-details-value">  40,400,000</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Region:</dt>
+                    <dd class="index-country-details-value"> Africa</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-tittle">Capital: </dt>
+                    <dd class="index-country-details-value">Algiers</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+  </main>
 
 
 
