add country-page-details class

--- a/country.html
+++ b/country.html
@@ -78,8 +78,8 @@
               <!-- 2 -->
               <dl class="country-page-details">
                 <div class="country-page-details-item">
-                  <dt> Top Level Domain:</dt>
-                  <dd>.be</dd>
+                  <dt class="country-page-details-item">Top Level Domain:</dt>
+                  <dd class="country-page-detailes-value">.be</dd>
                 </div>
 
                   <div class="country-page-details-item">
